data/derived/fa15/progs/unify/prog2956.ml.out
Characters 92-102:
  [n mod 10] :: digitsOfIntHelper (n - [n mod 10]/10);;
                                       ^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
